--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -1,1 +1,26 @@
 /* style here */
+.formGroup {
+  margin-bottom: 16px;
+}
+.formLabel {
+  margin-bottom: 8px;
+  display: inline-block;
+}
+
+.formInput {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #212529;
+  background-color: "#fff";
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s linear, box-shadow 0.15s linear;
+}
+
+.formInput:focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+}
